# robotank

./: .gitignore  .gitmodules  README.md
src/arduino_exchanger/: CMakeLists.txt  package.xml
src/arduino_exchanger/src/: arduino_exchanger_node.cpp
src/arduino_exchanger/src/arduino_exchanger/: arduino_exchanger.cpp  arduino_exchanger.h
src/arduino_sketch/: i2c_1.ino  robotank.ino
src/common/: trackers.h
src/gamepad_controller/: CMakeLists.txt  package.xml
src/gamepad_controller/msg/: JsEvent.msg
src/gamepad_controller/src/: gamepad_controller_node.cpp
src/gamepad_controller/src/gamepad_controller/: gamepad_controller.cpp  gamepad_controller.h
src/gpio_controller/: CMakeLists.txt  package.xml
src/gpio_controller/src/: gpio_controller_node.cpp
src/gpio_controller/src/gpio_controller/: gpio_controller.cpp  gpio_controller.h
src/robo_core/: CMakeLists.txt  package.xml
src/robo_core/msg/: Influence.msg
src/robo_core/src/: robo_core_node.cpp
src/robo_core/src/robo_core/: robo_core.cpp  robo_core.h
src/robo_gui/: CMakeLists.txt  package.xml
src/robo_gui/android/: AndroidManifest.xml  CMakeLists.txt  build.sh
src/robo_gui/src/: qml.qrc  resources.qrc  robo_gui_node.cpp
src/robo_gui/src/app/: application.cpp  application.h  main_window.cpp  main_window.h  master_status_checker.cpp  master_status_checker.h
src/robo_gui/src/domain/controllers/joystick_controller/: abstract_joystick_controller.cpp  abstract_joystick_controller.h  android_joystick_controller.cpp  android_joystick_controller.h  joystick_controller.cpp  joystick_controller.h  linux_joystick_controller.cpp  linux_joystick_controller.h
src/robo_gui/src/domain/models/joystick_model/: joystick_model.cpp  joystick_model.h
src/robo_gui/src/domain/models/robo_model/: robo_model.cpp  robo_model.h
src/robo_gui/src/domain/models/settings_model/: settings_model.cpp  settings_model.h
src/robo_gui/src/domain/models/sight_model/: sight_model.cpp  sight_model.h
src/robo_gui/src/domain/models/status_model/: status_model.cpp  status_model.h
src/robo_gui/src/domain/models/track_model/: track_model.cpp  track_model.h
src/robo_gui/src/presentation/main_window/: main_window.cpp  main_window.h
src/robo_gui/src/presentation/presenters/factory/: presenter_factory.cpp  presenter_factory.h
src/robo_gui/src/presentation/presenters/frame_presenter/: frame_presenter.cpp  frame_presenter.h
src/robo_gui/src/presentation/presenters/settings_presenter/: settings_presenter.cpp  settings_presenter.h
src/robo_gui/src/presentation/presenters/track_presenter/: track_presenter.cpp  track_presenter.h
src/robo_gui/src/qml/: Combat.qml  Main.qml  RButton.qml  Settings.qml  Target.qml  main.qml
src/robotank_sketch/: robotank_sketch.ino
src/tracker/: CMakeLists.txt  CMakeLists.txt.user.a5e4a68  package.xml
src/tracker/msg/: TrackerSelector.msg
src/tracker/src/: main.cpp  tracker_node.cpp
src/tracker/src/tracker/: tracker.cpp  tracker.h
src/tracker/src/tracker_factory/: tracker_factory.cpp  tracker_factory.h  trackers.h
src/tracker/src/tracker_impl/: tracker_keypoints.cpp
src/tracker/src/tracker_impl/custom_tld/: TLD.cpp  tld_adapter.cpp
src/tracker/src/tracker_impl/opentld/: opentld_adapter.cpp
src/tracker/src/tracker_node/: tracker_node.cpp  tracker_node.h
src/video_source/: CMakeLists.txt  package.xml
src/video_source/msg/: ImageSettings.msg
src/video_source/src/: video_source_node.cpp
src/video_source/src/video_source/: video_source.cpp  video_source.h
